--- a/inst/NEWS
+++ b/inst/NEWS
@@ -7,7 +7,7 @@ most sensitive groups on which to focus for biological interpretation.
 - Add of an RNAseq data with batch effect (zebraf) with an example of use of 
 ComBat_seq{sva} to correct the batch effect.
 - Add of PCAdataplot() a function to visualize omic data.
-- Add of an column named maxychange (maximal absolute y change (up or down) 
+- Add of a column named maxychange (maximal absolute y change (up or down) 
 from the control) in the output of drcfit() (and so of bmdcalc() and bmdboot())
 - Add an argument named scaling in curvesplot() and bmdplotwithgradient()
 that enables the scaling of the shifted signal (y - y0) by dividing 
@@ -19,7 +19,7 @@ RNAseqdata(), microarraydata() and continuousomicdata() objects,
 to prevent the automatic plot of many outliers as individual points and so
 produce lighter plot files.
 - Change the default value of transfo.method in RNAseqdata() (put at "vst" 
-when the number of samples is large than 30)
+when the number of samples is larger than 30)
 
 BUG FIXES
 - Make sensitivityplot works even when BMDsummary is not given in input 
@@ -30,7 +30,7 @@ Version 2.4-0
 =======================
 NEW FEATURES
 - Forbid the use of the "ANOVA" method to select items when more than half of the doses are without replicates (e.g. for in situ data)
-- Add of a example data set named insitu_RNAseq_sample.txt for tests and examples
+- Add of an example data set named insitu_RNAseq_sample.txt for tests and examples
 - Add of arguments BMDoutput and BMDtype to plot.drcfit() and 
 plotfit2pdf to make possible the add of BMD values and confidence 
 intervals on the plot of fits.
@@ -40,8 +40,8 @@ the simplification of the Gauss-probit model with 5 parameters by its version wi
 (evaluated using the information criterion).
 - Add of an argument (enablesfequal0inLGP) by default at TRUE in drcfit(), to enable
 the simplification of the log-Gauss-probit model with 5 parameters by its version with f = 0 
-(which corresponds to the log-probit model) to prevent overfitting when the parameter f is close to 0 
-(evaluated using the information criterion).
+(which corresponds to the log-probit model) to prevent overfitting when the parameter f is close 
+to 0 (evaluated using the information criterion).
 - Add of an argument (preventsfitsoutofrange) by default at TRUE in drcfit() 
 to prevent fits of biphasic models giving an extreme value out of the range of 
 the observed signal, that could happen in rare cases.
