--- a/vignettes/DRomics_vignette.Rmd
+++ b/vignettes/DRomics_vignette.Rmd
@@ -5,7 +5,7 @@ date: '`r Sys.Date()`'
 output:
   html_vignette:
   # pdf_document:
-    toc: yes
+    toc: true
     number_sections: yes
     toc_depth: 4
 urlcolor: blue
@@ -17,6 +17,8 @@ vignette: >
   %\VignetteIndexEntry{Overview of the DRomics package} 
   %!\VignetteEncoding{UTF-8}
   \usepackage[utf8]{inputenc}
+pkgdown:
+  as_is: true
 ---
 
 ```{r setup, echo=FALSE, message=FALSE, warning=FALSE}
